--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 /* Header */
 
 header {
+	float: left;
 	width: 76%;
 	height: 48px;
 	padding: 10px 0;
 	background-color: #FFC700;
-	position:;
+	position: absolute;
 	top: 70px;
 	right: 0;
 	bottom: 20px;
@@ -24,7 +25,7 @@ header {
 }
 /* Horizintal Navigation */
 nav {
-	float: left;
+	float: right;
 	width: 100%;
 }
 nav ul {
@@ -133,7 +134,7 @@ a:active {
 	padding: 100px 0;
 	float: left;
 	text-align: left;
-	background: url(./images/rectangle-11.jpg);
+	background: url(../images/rectangle-11.jpg);
 	background-size:cover;
 	background-position: center;
 	}
@@ -304,11 +305,10 @@ background-image:url(../images/places_eat.jpg);
 }
 /*end things-to-do*/
 /*Accommodations*/
-#accommodations{
+#accommodations {
 	width: 100%;
 	padding: 100px 0;
 	float: left;
-	text-align: center;
 	}
 .stay{
 	text-align: left;
