--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /* Header */
 
 header {
-	float: left;
 	width: 76%;
 	height: 48px;
 	padding: 10px 0;
@@ -10,7 +9,6 @@ header {
 	top: 70px;
 	right: 0;
 	bottom: 20px;
-	left: 345px;
 	z-index: 1;
 }
 .branding {
@@ -21,7 +19,7 @@ header {
 .Logotype {
 	display: block;
 	background: url("../images/logotype.svg") no-repeat;
-	text-indent: -999em;
+	
 }
 /* Horizintal Navigation */
 nav {
@@ -122,11 +120,27 @@ a:active {
 .hero-image img {
 	position: absolute;
 	left: 100px;
-	top: 20px;
+	top: 25px;
 	text-indent: -999em;
-	width: 127.87px;
-	height: 55.45px;
+	width: 199.78px;
+	height: 86.63px;
 	
+}
+.header-txt {
+	color: #FFFFFF;
+	padding-top: 250px;
+	padding-left: 250px;
+	position: inherit;
+	text-align: left;
+	width: 100%;
+text-shadow: 2px 2px 4px #000000;	
+}
+.sub-head{
+	padding-left: 250px;
+	text-align: left;
+	color: #FFFFFF;
+	width: 100%;
+	text-shadow: 4px,2px,4px,#000000;
 }
 /*explore*/
 #explore {
@@ -177,31 +191,6 @@ a:active {
     padding-left: 20px;
     padding-right: 20px;
 
-}
-.type-overlay {
-	top: 250px;
-	width: 100%;
-	z-index: 5;
-	text-align: center;
-	text-transform: uppercase;
-	position: absolute;
-	color: #FFFFFF;
-}
-.header-txt {
-	color: #FFFFFF;
-	position: absolute;
-	top: 250px;
-	left: 500px;
-	width: 100%;
-text-shadow: 2px 2px 4px #000000;	
-}
-.sub-head{
-	color: #FFFFFF;
-		top: 370px;
-		left: 500px;
-	width: 100%;
-	position: absolute;
-	text-shadow: 4px,2px,4px,#000000;
 }
 .section-heads {
 	text-align: center;
