--- a/css/style.css
+++ b/css/style.css
@@ -607,3 +607,13 @@ footer a:active {
 	text-align: center;
 }
 /*end footer*/
+
+.headroom {
+    transition: transform 200ms linear;
+}
+.headroom--pinned {
+    transform: translateY(0%);
+}
+.headroom--unpinned {
+    transform: translateY(-100%);
+}
