--- a/css/base.css
+++ b/css/base.css
@@ -19,6 +19,7 @@ body {
 p {
 	margin: 0px;
 	text-align: left;
+	line-height: 1.2em
 	
 }
 h1, h2, h3, h4, h5, h6 {
@@ -36,6 +37,8 @@ h2 {
 	font-family: 'Merriweather', serif;
 	font-size: 2.827em;
 	font-weight: 700;
+		color: #3359B0;
+
 }
 h3 {
 	font-family: 'Yantramanav', sans-serif;
