--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,39 @@
 /* Header */
+.topnav {
+  background-color: #ffc700;
+  overflow: hidden;
+}
 
-header {
-	width: 76%;
-	height: 48px;
-	padding: 10px 0;
-	background-color: #FFC700;
-	position: absolute;
-	top: 70px;
-	right: 0;
-	bottom: 20px;
-	z-index: 1;
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 30px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: white;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: black;
 }
 .branding {
 	width: 199.78px;
-	height: 86.63px;
+	height: 70px;
 	position: absolute;
-	left: 20px;
-	top: 35px;
 	display: block;
 	background: url(../images/logotype.svg) no-repeat;
 	float: left;
+	left: 100px;
+	top:10px;
 }
 .Logotype {
 	display: block;
@@ -57,7 +71,7 @@ a:link {
 	text-decoration: none;
 }
 a:visited {
-	color: #000000;
+	color: #ffffff;
 	text-decoration: none;
 }
 a:hover {
@@ -104,13 +118,13 @@ a:active {
 	padding: 8px;
 }
 .orange {
-	border: 1px #FFC700;
-	background-color: #FFC700;
+	border: 1px #5576C2;
+	background-color: #5576C2;
 	height: 120px;
 	width: 100%;
 	position: absolute;
 	padding: 42px ;
-	top: 560px;
+	top: 600px;
 	bottom: 73px;
 	z-index: 3;
 }
@@ -139,15 +153,15 @@ a:active {
 }
 .header-txt {
 	color: #FFFFFF;
-	padding-top: 250px;
-	padding-left: 250px;
+	padding-top: 220px;
+	padding-left: 150px;
 	position: inherit;
 	text-align: left;
 	width: 100%;
 text-shadow: 2px 2px 4px #000000;	
 }
 .sub-head{
-	padding-left: 250px;
+	padding-left: 150px;
 	text-align: left;
 	color: #FFFFFF;
 	width: 100%;
@@ -183,6 +197,8 @@ text-shadow: 2px 2px 4px #000000;
 	padding: 100px 0;
 	float: left;
 	text-align: left;
+	color: #000000;
+	background-color: #ffe280;
 	}
 .landmark-subhead {
 	margin-bottom: 10px;
@@ -206,14 +222,16 @@ text-shadow: 2px 2px 4px #000000;
 }
 .section-heads {
 	text-align: center;
-	margin-bottom: 20px
+	margin-bottom: 20px;
+	color: #000000;
 }
 /*end tours*/
 /*things to do*/
-#to-do {
+#things-to-do {
 	width: 100%;
 	padding:100px 0;
 	float: left;
+	background-color: #ffe280;
 	text-align: center;
 	}
 .type-overlay-2{
@@ -230,7 +248,7 @@ text-shadow: 2px 2px 4px #000000;
 }
 .type-overlay-3{
 	position:absolute;
-	background: rgba(255, 199, 0, .5);
+	background: rgba(51, 89, 176, .6);
 	height: 55px;
 	margin-top: 130px;
 	text-align:left;
@@ -308,7 +326,7 @@ background-image:url(../images/places_eat.jpg);
 }
 /*end things-to-do*/
 /*Accommodations*/
-#accommodations {
+#accomodations  {
 	width: 100%;
 	padding: 100px 0;
 	float: left;
@@ -328,7 +346,7 @@ background-image:url(../images/places_eat.jpg);
 	background: #3359B0;
 	padding: 10px 15px ;
 	text-align: center;
-	border-radius: 5px;
+	border-radius: 25px;
 	font-size: 1em;
 	font-weight: 400;
 	cursor: pointer;
@@ -405,7 +423,7 @@ background-image:url(../images/places_eat.jpg);
 	padding: 90px 0 100px;
 	float: left;
 	padding-bottom: 0px;
-	
+	background-color: #FFC700;
 }
 .contact-form {
 	width: 460px;
@@ -449,7 +467,7 @@ background-image:url(../images/places_eat.jpg);
 	text-align: left;
 }
 .get-help{
-	background-color: #FFC700;
+	background-color: #FFFFFF;
 	width: 100%;
 	height: 177px;
 	margin-top: 80px;
